test/success/unit/_succ_actarg_1.hs
x :: Int -> Int
x y = y
y, z :: Int
y = 3
z = x y
main = print "hello"