test/fail/integration/_fail_sem_expr_funct_call_2.hs
x :: [Int] -> Int
y :: Int
y = x [1,2,3]
main = print "hello"